# karton-rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  install.sh
.github/.karton/: index.json
.github/workflows/: build_release.yml
public/.karton/: index.json
public/css/: karton.css
public/js/: admin-panel.js  app.js  gallery-grid.js  grid-vanilla.js
resources/: 401.html  admin.html  index.html  login.html
src/: album.rs  album_image.rs  auth.rs  cli.rs  main.rs  store.rs  trash.rs  trial.rs  youtil.rs
src/.karton/: index.json
templates/: index.html
templates/.karton/: index.json
