[package]
name = "karton"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.1"
axum = "0.8.8"
clap = { version = "4.5.54", features = ["derive"] }
directories = "6.0.0"
image = "0.25.9"
md5 = "0.8.0"
mime_guess = "2.0.5"
rust-embed = { version = "8.11.0", features = ["axum-ex"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
zip = "7.1.0"

