[package]
name = "karton"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.1"
axum = "0.8.8"
base64 = "0.22.1"
clap = { version = "4.5.54", features = ["derive"] }
directories = "6.0.0"
image = "0.25.9"
md5 = "0.8.0"
mime_guess = "2.0.5"
rand = "0.9.2"
rust-embed = { version = "8.11.0", features = ["axum-ex"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
temp-file = "0.1.9"
tokio = { version = "1.49.0", features = ["full"] }
tokio-js-set-interval = "1.3.0"
tokio-util = { version = "0.7.18", features = ["io"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs"] }
webbrowser = "1.0.6"
zip = "7.1.0"

