[package]
name = "karton"
version = "0.1.0"
edition = "2024"
default-run = "karton"

[[bin]]
name = "karton"
path = "src/main.rs"

[[bin]]
name = "trial"
path = "src/trial.rs"


[dependencies]
askama = "0.15.1"
axum = "0.8.8"
base64 = "0.22.1"
clap = { version = "4.5.54", features = ["derive"] }
directories = "6.0.0"
fast_image_resize = { version = "6.0.0", features = ["image"] }
image = "0.25.9"
md5 = "0.8.0"
memory-stats = "1.2.0"
mime_guess = "2.0.5"
rand = "0.9.2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rust-embed = { version = "8.11.0", features = ["axum-ex"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
temp-file = "0.1.9"
time = "0.3.46"
tokio = { version = "1.49.0", features = ["full"] }
tokio-js-set-interval = "1.3.0"
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs"] }
tower-sessions = "0.14.0"
webbrowser = "1.0.6"
zip = "7.1.0"

[build-dependencies]
time = "0.3.46"

